<resources>
    <string name="app_name">OPSC_POE</string>
    <string name ="CreateActivityHelp">Welcome to CreateActivity Help \n\nCreate Activity Page is where you will create new activities, where you are required to enter name, description,
        category, and an image to create a new Activity</string>
    <string name ="CreateGoalHelp">Welcome to CreateGoal Help \n\nCreate Goal Page is where you will create goals to your inputted activity,
        you will need to select hours and a time frame</string>
    <string name="CreateGoalHelpHeading">Create Goal Help</string>
    <string name="CreateActivityHelpHeading">Create Activity Help</string>
    <string name="SignUpHelp">Welcome to SignUp Help \n\nHere you are required to enter Username and Password to create an account with us to access our application</string>
    <string name="SignUpHelpHeading">Sign Up Help</string>
    <string name="exportActivityHeaders">Activity Name, Description, Category, Number of Logs, Total Hours Logged (Hours), Maximum Goal Interval, Maximum Goal (Hours), Maximum Goal Remaining Time (Hours), Minimum Goal Interval, Minimum Goal (Hours), Minimum Goal Remaining Time (Hours)</string>
    <string name="exportLogHeaders">Activity Name, Hours Logged, Date Logged</string>
    <string name="exportLogFileName">userLogData.csv</string>
    <string name="exportActivityFileName">userActivityData.csv</string>
    <string name="activityIdentityIndex">activityIDIndex</string>
    <string name="errorTitle">Error</string>
    <string name="logStopwatch">Stopwatch</string>
    <string name="logManualInput">Input Hours</string>
    <string name="inputErrorTitle">Input Error</string>
    <string name="addLogErrorMessage">Cannot have 0 hours. Please set the amount of hours or use the stop watch to time an activity</string>
    <string name="dateFormat">dd-MM-yyyy</string>
    <string name="timerStartText">Start</string>
    <string name="timerStopText">Stop</string>
    <string name="timeStringFormat">%02d:%02d:%02d</string>
    <string name="categoryIdentityIndex">categoryIDIndex</string>
    <string name="textActivity">Activity</string>
    <string name="promptTotalHours">Total Hours:</string>
    <string name="previousScreenKey">previousScreen</string>
    <string name="categoryViewScreenValue">Category_View</string>
    <string name="currentDataIDKey">currentDataID</string>
    <string name="currentActivityIndex">CurrentActivity</string>
    <string name="intervalDaily">Daily</string>
    <string name="intervalWeekly">Weekly</string>
    <string name="intervalMonthly">Monthly</string>
    <string name="currentGoalIdentityIndex">currentGoalIDIndex</string>
    <string name="textEdit">Edit</string>
    <string name="createGoalScreenValue">Create_Goal</string>
    <string name="noCategoriesTitle">No Categories Available</string>
    <string name="noCategoriesMessage">Add a category from the home page</string>
    <string name="textCreate">Create</string>
    <string name="categoriesNeeded">Category Needed</string>
    <string name="fileExtensionJPG">.jpg</string>
    <string name="needAllInputFields">All input fields required</string>
    <string name="needActivityDescription">Please enter an activity description</string>
    <string name="needActivityName">Please enter an activity name</string>
    <string name="createActivityScreenValue">Create_Activity</string>
    <string name="cameraUnavailable">Camera is not available</string>
    <string name="getData">data</string>
    <string name="colorFormat">#%06X</string>
    <string name="defaultDate">01-01-1900</string>
    <string name="providerAddOn">.provider</string>
    <string name="exportFileTypeFilter">text/csv</string>
    <string name="sharePrompt">Share using...</string>
    <string name="animUp">Up</string>
    <string name="animDown">Down</string>
    <string name="animLeft">Left</string>
    <string name="animRight">Right</string>
    <string name="animLeftHalf">Left_Half</string>
    <string name="animRightHalf">Right_Half</string>
    <string name="viewLogList">List</string>
    <string name="viewLogCategory">Category</string>
    <string name="noMatchingDate">No date in this time period</string>
    <string name="noCategorySelected">No category selected</string>
    <string name="pieCategoriesEntriesText">Category Totals</string>
    <string name="logsScreenFunction">Logs</string>
    <string name="noLogsTitle">No Logs Exist</string>
    <string name="promptToGoAddLog">Go to an activity to add a log</string>
    <string name="logsDataScreenFunction">LogsData</string>
    <string name="hoursLoggedPrompt">Hours Logged</string>
    <string name="textNo">No</string>
    <string name="textData">Data</string>
    <string name="promptIndicatorToAdd">Click Here to Add</string>
    <string name="clickIndicator">Click Here</string>
    <string name="logScreenFunction">Log</string>
    <string name="addSymbol">+</string>
    <string name="noLogsFound">No Logs Found</string>
    <string name="noLogsFoundMessage">Try a different set of filters</string>
    <string name="calSymbol">📅</string>
    <string name="alertOK">OK</string>
    <string name="timeDelimiter">.</string>
    <string name="minutesFractionStart">0.</string>
    <string name="signUpScreenValue">Sign_Up</string>
    <string name="loadSignUpKey">LoadSignUp</string>
    <string name="viewUserActivitiesTitle">Activities</string>
    <string name="viewUserCategoriesTitle">Categories</string>
    <string name="homeView">Home_View</string>
    <string name="numberOfActivitiesInCategory">No of activities: </string>
    <string name="activityView">Activity_View</string>
    <string name="hashSymbol">#</string>
    <string name="workOvertime">Overtime</string>
    <string name="hoursLeft">Hours to Go!</string>
    <string name="tickSymbol">✔</string>
    <string name="workCompleted">Goal Reached!</string>
    <string name="byteArrayFormatter">%02x</string>
    <string name="incompleteFields">Please fill in all fields</string>
    <string name="askForEmail">Your email</string>
    <string name="forgotPasswordTitle">Forgot Password? (Coming Soon)</string>
    <string name="forgotPasswordMessage">Enter your email, a 6-digit reset code will be delivered shortly</string>
    <string name="alertSend">Send</string>
    <string name="alertCancel">Cancel</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="invalidEmailMessage">The email you entered either does not exist or is invalid</string>
    <string name="invalidSignInTitle">Unable to Sign In</string>
    <string name="invalidSignInMessage">Cannot find user with the given data</string>
    <string name="invalidSignUpTitle">Unable to Sign Up</string>
    <string name="invalidSignUpMessage">A user with the provided data already exists</string>
    <string name="addedUserTitle">Account Created</string>
    <string name="addedUserMessage">Your account has been registered, Please Log In</string>
    <string name="passwordShort">Password too short, needs to be 8 or more characters</string>
    <string name="passwordNeedsNumber">Password needs to contain at least 1 digit</string>
    <string name="passwordNeedsLowerCase">Password needs to contain at least 1 lower case character</string>
    <string name="passwordNeedsUpperCase">Password needs to contain at least 1 upper case character</string>
    <string name="passwordNeedsToStartWithUpperCaseLetter">Password needs start with an upper case character</string>
    <string name="passwordNeedsSpecialCharacter">Password needs to include one of the following special characters: -?!@#£$%+=&amp;</string>
    <string name="passwordSpecialCharacters">-?!@#£$%+=&amp;</string>
    <string name="maxGoalPrompt">Maximum Goal</string>
    <string name="noSetGoal">Goal Not Set</string>
    <string name="minGoalPrompt">Minimum Goal</string>
    <string name="start_date">Start Date</string>
    <string name="date">Date</string>
    <string name="log_option">Log Option</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="hours">Hours</string>
    <string name="add_log">Add Log</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="insert_image">Insert Image</string>
    <string name="save">Save</string>
    <string name="help">Need Help?</string>
    <string name="colour">Colour</string>
    <string name="pick_colour">Pick Colour</string>
    <string name="goal">Goal</string>
    <string name="time_frame">Time Frame</string>
    <string name="logs">Logs</string>
    <string name="list">List</string>
    <string name="back">Back</string>
    <string name="set_start">Set Start Date</string>
    <string name="set_end">Set End Date</string>
    <string name="cat_info">Category Information</string>
    <string name="no_cat">No Category Selected</string>
    <string name="help_title">Help</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to">Welcome to</string>
    <string name="turtle_time">Turtle Time</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="view_logs">View Logs</string>
    <string name="goals">Goals</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="all_logs">All Logs</string>
    <string name="sign_out">Sign Out</string>
    <string name="export">Export Data</string>
    <string name="password_reset">Reset Password</string>
    <string name="settings">Settings</string>
    <string name="promptCurrentPassword">Current Password</string>
    <string name="promptCollectCurrentPassword">Enter your current password below</string>
    <string name="promptNewPassword">New Password</string>
    <string name="promptEnterNewPassword">Enter a new password</string>
    <string name="alertConfirm">Confirm</string>
    <string name="updatedPasswordTitle">Password Updated</string>
    <string name="updatedPasswordMessage">Your new password has been set</string>
    <string name="attemptedPasswordDoesNotMatch">The password you entered does not match your current password</string>
    <string name="exportActivityDataTitle">Activity Data</string>
    <string name="exportLogDataTitle">Log Data</string>
    <string name="promptExportData">Select the type of data to export</string>
</resources>