<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@color/Dark_Green">

    <View
        android:id="@+id/vwEntryMethodBar"
        android:layout_width="140dp"
        android:layout_height="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="225dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/Input_Grey"/>




    <ImageView
        android:id="@+id/imgCyanTurtle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/cyanturtle"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="15dp"
        android:rotation="-125"
        android:layout_below="@id/vwEntryMethodBar"/>

    <TextView
        android:id="@+id/tvEmailPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgCyanTurtle"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="-26dp"
        android:layout_weight="1"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/Input_Grey"
        android:textSize="20dp" />


    <EditText
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvEmailPrompt"
        android:layout_marginLeft="20dp"
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_rectangle"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tvUsernamePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/Input_Grey"
        android:textSize="20dp" />


    <EditText
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvUsernamePrompt"
        android:layout_marginLeft="20dp"
        android:id="@+id/etUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/rounded_rectangle"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/tvPasswordPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/Input_Grey"
        android:textSize="20dp" />


    <EditText
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvPasswordPrompt"
        android:layout_marginLeft="20dp"
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/rounded_rectangle"
        android:padding="5dp"/>


    <TextView
        android:id="@+id/tvSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/Muted_Green"
        android:clickable="true"
        android:onClick="onClick"
        android:paddingHorizontal="60dp"
        android:paddingVertical="5dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/Input_Grey"
        android:textSize="24dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNeedHelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSignUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:clickable="true"
        android:onClick="onClick"
        android:paddingHorizontal="60dp"
        android:paddingVertical="5dp"
        android:text="@string/help"
        android:textAlignment="center"
        android:textColor="@color/Input_Grey"
        android:textSize="16dp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imgBrownTurtle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="290dp"
        android:rotation="10"
        app:srcCompat="@drawable/greenturtle"
        android:layout_below="@id/tvNeedHelpButton"/>

    <ImageView
        android:id="@+id/imgGreenTurtle"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-16dp"
        android:rotation="-20"
        app:srcCompat="@drawable/brownturtle"
        android:layout_below="@id/tvNeedHelpButton"/>

</RelativeLayout>